# OpenVoiceChat

./: .gitignore  404.html  README.md  main_thinking.py  objects.inv  requirements.txt  setup.cfg  translation.py
Adding_models/: index.html
base_classes/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
home/: index.html
llm_classes/: index.html
notes/: Ideas.md
search/: search_index.json
stt_classes/: index.html
stt_utils/: index.html
tts_classes/: index.html
utils/: index.html
