[metadata]
name = openvoicechat
version = 0.0.1
author = Fakhir Ali
author_email = ali.fakhir33@gmail.com
description = Have a natural voice conversation with any LLM agent
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fakhirali/OpenVoiceChat

[options]
packages = find:
python_requires = >=3.7
include_package_data = True